--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,38 @@
   border:.3px solid red;
 }
 
+.ant-layout-content{
+  padding: 0px 50px;
+}
+
+.ant-layout-sider{
+  min-width: 250px;
+  max-width: 250px;
+}
+
 .yeet{
-  border:.2px solid blue;
+  /* border:.2px solid blue; */
   display:flex;
   flex-wrap: wrap;
-  
+  justify-content: space-around;
+}
+
+.ant-card{
+  width:20%;
+  margin:5%;
+}
+
+@media screen and (max-width:1050px){
+  .yeet{
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+  .ant-card{
+    width: 60%;
+    margin: 5% auto;
+  }
+  .ant-layout-content{
+    padding: 0 20px;
+  }
 }
 
