I checked other exommerce sites and the bottom left positioning isn't uncommon so It'll stay. Added some more functionality to specify the page size

--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,13 @@
   margin:1%;
 }
 
+.ant-pagination{
+  margin: 1% auto;
+  /* border:1px solid black; */
+  /* width: 50%; */
+  padding:10% auto;
+}
+
 @media screen and (max-width:1050px){
   .yeet{
     flex-direction: column;
