Got everything for the country I'd like rendered on the page, now will work on the styling and layout of the Card

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
   display:flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  border:.1px solid red;
 }
 
 .ant-card{
@@ -34,6 +35,15 @@
 
 .ant-input-group-wrapper{
   margin-bottom:5%;
+}
+
+.Info{
+  border:.1px solid blue;
+  display: flex;
+}
+
+.Stats{
+  border:.1px solid green;
 }
 
 @media screen and (max-width:1050px){
