--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@
 }
 
 .Info{
-  border:.1px solid blue;
+  /* border:.1px solid blue; */
   display: flex;
 }
 
@@ -49,21 +49,22 @@
 
 .ant-tabs{
   width: 50%;
-  /* border:1px solid red; */
 }
 
-/* .ant-tabs-top-content{
-  height: 91%;
+.ant-tabs .ant-tabs-top-content{
+  height: 92.3%;
+  /* border:1px solid red */
 }
 
-.ant-tabs-tabpane{
+.ant-tabs .ant-tabs-tabpane{
   height: 100%;
-} */
+}
 
 .Stats{
-  background: #ececec;
+  background: #f0f2f5;
   padding: 5%;
   width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
