--- a/src/App.css
+++ b/src/App.css
@@ -85,6 +85,12 @@
   padding: 10%;
 }
 
+.badges{
+  border:.1px solid blue;
+  width: 50%;
+  margin: 1% auto;
+}
+
 @media screen and (max-width:1050px){
 
 
